# localGPT

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
